css style main page %span on login to fix line wrap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -102,5 +102,7 @@ input#user_email, input#user_password, input#user_password_confirmation, input#u
   color: black;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
 }
-
-
+.curr-user-style {
+  color: #2a6496;
+   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+}
